Fix embed card alignment

--- a/packages/ruby/assets/css/misc/kg.css
+++ b/packages/ruby/assets/css/misc/kg.css
@@ -43,3 +43,10 @@ blockquote.kg-blockquote-alt {
     margin-right: auto;
     margin-left: auto;
 }
+
+.kg-embed-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
